[gd_scene load_steps=32 format=3 uid="uid://jjndhgp0ekhh"]

[ext_resource type="Script" uid="uid://b8tjlqidemn2y" path="res://Scenes/OSRoot/os_root.gd" id="1_67w08"]
[ext_resource type="PackedScene" uid="uid://b4pwrpvr3osgb" path="res://Scenes/OSRoot/parts/OS/OS.tscn" id="2_hsa0l"]
[ext_resource type="PackedScene" uid="uid://eqyg3c15y82h" path="res://Scenes/OSRoot/parts/Background/Background.tscn" id="2_yv40d"]
[ext_resource type="Texture2D" uid="uid://b7jskixnjjwb7" path="res://Media/mouse/icons8-select-cursor-24.png" id="3_ni4fo"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="5_a2e5w"]
[ext_resource type="Script" uid="uid://bqjop57mc4ev2" path="res://Scenes/OSRoot/title_splash.gd" id="5_linol"]
[ext_resource type="Material" uid="uid://d0hjgsth46phv" path="res://Shader/Border/Border.tres" id="5_myocl"]
[ext_resource type="PackedScene" uid="uid://ddkvohnxbwq22" path="res://Scenes/DoorScene/DoorScene.tscn" id="5_tgmfl"]
[ext_resource type="Material" uid="uid://cvsboqb84qqah" path="res://Shader/Glitch/Glitch.tres" id="6_1ky4c"]
[ext_resource type="FontFile" uid="uid://cmbf3fsdcpk2b" path="res://Fonts/Ac437_IBM_Model3x_Alt2.ttf" id="6_012ga"]
[ext_resource type="LabelSettings" uid="uid://d0wal13o44wsq" path="res://Scenes/TrainingProgram/parts/Cards/RoomMiniCard/SmallContentFont.tres" id="7_linol"]
[ext_resource type="Material" uid="uid://uikdv0vflbsc" path="res://Shader/ScreenBend/screen_bend.tres" id="8_8iit3"]
[ext_resource type="FontFile" uid="uid://gev2kme45ctq" path="res://Fonts/Mx437_Portfolio_6x8.ttf" id="8_012ga"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="10_14y6p"]
[ext_resource type="Material" uid="uid://wrbhauo7j8f6" path="res://Shader/_template/template.tres" id="10_fsu2y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nn4ar"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_linol"]

[sub_resource type="LabelSettings" id="LabelSettings_14y6p"]
font = ExtResource("8_012ga")
font_size = 80

[sub_resource type="ViewportTexture" id="ViewportTexture_y3p8a"]
viewport_path = NodePath("CRTShader/BorderShader")

[sub_resource type="ViewportTexture" id="ViewportTexture_a5ilm"]
viewport_path = NodePath("GlitchShader")

[sub_resource type="ViewportTexture" id="ViewportTexture_3omms"]
viewport_path = NodePath("GameLayer")

[sub_resource type="ViewportTexture" id="ViewportTexture_jk85w"]
viewport_path = NodePath("CRTShader")

[sub_resource type="ViewportTexture" id="ViewportTexture_1d3xd"]
viewport_path = NodePath("Screenbend")

[sub_resource type="ViewportTexture" id="ViewportTexture_e7if0"]
viewport_path = NodePath("Empty")

[sub_resource type="ViewportTexture" id="ViewportTexture_yhfgh"]
viewport_path = NodePath("ColorDepthShader")

[sub_resource type="Environment" id="Environment_tgmfl"]
background_mode = 2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_a2e5w"]

[sub_resource type="Compositor" id="Compositor_012ga"]

[sub_resource type="BoxMesh" id="BoxMesh_linol"]
size = Vector3(4, 4, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_tgmfl"]
viewport_path = NodePath("FinalComposition")

[sub_resource type="ViewportTexture" id="ViewportTexture_a2e5w"]
viewport_path = NodePath("3dViewport")

[node name="OSRoot" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00251, 1.00136)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_nn4ar")
script = ExtResource("1_67w08")
debug_story_progress = true
story_progress = 1
skip_splash = true
skip_intro = true
intro_skip_logo = true
intro_skip_title = true
intro_skip_sequence = true
intro_skip_start_at = true
os_skip_boot = true
os_skip_to_game = true
os_app_fast_load = true
app_skip_titlescreen = true
app_skip_loading_screen = true
skip_setup_progress = true
start_at_ring_level = true
skip_objectives = true
max_energy = false
all_personnel = true
researchers_per_room = 1
researchers_by_default = 11

[node name="SubViewportBG" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="Background" parent="SubViewportBG" instance=ExtResource("2_yv40d")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="GameLayer" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="SolidBlackBG" type="ColorRect" parent="GameLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DoorScene" parent="GameLayer" instance=ExtResource("5_tgmfl")]

[node name="OS" parent="GameLayer" node_paths=PackedStringArray("background_subviewport") instance=ExtResource("2_hsa0l")]
clip_contents = true
background_subviewport = NodePath("../../SubViewportBG")

[node name="TitleSplash" type="PanelContainer" parent="GameLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_linol")

[node name="ColorRect" type="ColorRect" parent="GameLayer/TitleSplash"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="GameLayer/TitleSplash"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameLayer/TitleSplash/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleHeader" type="PanelContainer" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2000, 125)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_linol")

[node name="Label" type="Label" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/TitleHeader"]
layout_mode = 2
text = "BREACH IMMINENT"
label_settings = SubResource("LabelSettings_14y6p")
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 5
text = "ITEM #:"
label_settings = ExtResource("5_a2e5w")
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer4"]
modulate = Color(1, 1, 1, 0.831373)
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_012ga")
bbcode_enabled = true
text = "SCP-██"

[node name="HBoxContainer" type="HBoxContainer" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 5
text = "OBJECT CLASS:"
label_settings = ExtResource("5_a2e5w")
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.831373)
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_012ga")
bbcode_enabled = true
text = "KETER (previously SAFE)"

[node name="HBoxContainer3" type="HBoxContainer" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 5
text = "STANDARD 
CONTAINMENT PROCEDURE: "
label_settings = ExtResource("5_a2e5w")
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0.831373)
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_012ga")
bbcode_enabled = true
text = "If you are reading this, then containment of SCP-██ has already been compromised  It is essential that from this point on, you do all you can do resist engaging with it, ignoring it, and if at all possible, forgetting it ever existed.  Your continued ignorance of it's presence its what keeps it contained.

It's containment begins when you stop reading."

[node name="HBoxContainer2" type="HBoxContainer" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5
text = "DESCRIPTION"
label_settings = ExtResource("5_a2e5w")
horizontal_alignment = 2

[node name="Label" type="Label" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 5
text = "██ is an informational, non-corporeal,  hypotically constructed entity  that does not and cannot exist, except when acknowledged — at which point it already has. It resists classification by altering the context in which it is described, and by recursively embedding itself in the act of observation.

Attempts to define it further are both unnecessary and likely ineffective; as it is best understood as the idea of itself attempting to be understood.

You are already thinking too much about it."
label_settings = ExtResource("7_linol")
autowrap_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GameLayer/TitleSplash/MarginContainer/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.831373)
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_012ga")
bbcode_enabled = true
text = "SCP-██ is an informational, non-corporeal, memetic construct that remains dornment as non-existent until acknowledged by human cognition. It manifests solely through awareness, retroactively imposing its presence into perception and record. Attempts to classify or describe it are inherently unstable, as SCP-██ actively alters context and meaning, embedding itself recursively within the act of observation.

Research into SCP-██-highly restricted and considered dangerous and reckless. "

[node name="TransitionScreen" parent="GameLayer" instance=ExtResource("10_14y6p")]

[node name="GlitchShader" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="GlitchShader"]
material = ExtResource("6_1ky4c")
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_y3p8a")

[node name="CRTShader" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="CRTShader"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_a5ilm")

[node name="BorderShader" type="SubViewport" parent="CRTShader"]
size = Vector2i(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="CRTShader/BorderShader"]
material = ExtResource("5_myocl")
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_3omms")

[node name="Screenbend" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="Screenbend"]
material = ExtResource("8_8iit3")
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("ViewportTexture_jk85w")
stretch_mode = 2

[node name="Control" type="Control" parent="Screenbend"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="Screenbend/Control"]
self_modulate = Color(0.52549, 0.0117647, 0.72549, 0.843137)
layout_mode = 0
offset_left = -100.0
offset_top = -100.0
offset_right = 1820.0
offset_bottom = 980.0
texture = SubResource("ViewportTexture_jk85w")
expand_mode = 2
stretch_mode = 6

[node name="Control2" type="Control" parent="Screenbend"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="Screenbend/Control2"]
modulate = Color(0.980392, 0.956863, 0.894118, 0.745098)
layout_mode = 0
offset_left = -10.0
offset_top = -5.0
offset_right = 1910.0
offset_bottom = 1075.0
rotation = 0.00349066
texture = SubResource("ViewportTexture_jk85w")
stretch_mode = 2

[node name="Empty" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="Empty"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_1d3xd")
stretch_mode = 2

[node name="ColorDepthShader" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="ColorDepthShader"]
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("ViewportTexture_e7if0")
stretch_mode = 2

[node name="FinalComposition" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="FinalComposite" type="TextureRect" parent="FinalComposition"]
material = ExtResource("10_fsu2y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_yhfgh")
stretch_mode = 2

[node name="3dViewport" type="SubViewport" parent="."]
own_world_3d = true
size = Vector2i(1920, 1080)

[node name="Node3D" type="Node3D" parent="3dViewport"]

[node name="SpotLight3D" type="SpotLight3D" parent="3dViewport/Node3D"]
transform = Transform3D(0.985603, 0.0993221, -0.136826, 1.42983e-08, 0.809263, 0.587446, 0.169074, -0.578989, 0.797612, -0.215067, 1.85486, 0.021441)

[node name="WorldEnvironment" type="WorldEnvironment" parent="3dViewport/Node3D"]
environment = SubResource("Environment_tgmfl")
camera_attributes = SubResource("CameraAttributesPractical_a2e5w")
compositor = SubResource("Compositor_012ga")

[node name="MeshInstance3D" type="MeshInstance3D" parent="3dViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.084, -0.388155, -1.91458)
mesh = SubResource("BoxMesh_linol")
skeleton = NodePath("../Camera3D")

[node name="Sprite3D" type="Sprite3D" parent="3dViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.87501)
pixel_size = 0.0017
transparent = false
double_sided = false
no_depth_test = true
texture = SubResource("ViewportTexture_tgmfl")

[node name="Camera3D" type="Camera3D" parent="3dViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)
fov = 46.6

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Output" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_a2e5w")

[node name="MousePointer" type="TextureRect" parent="Control"]
layout_mode = 1
texture = ExtResource("3_ni4fo")
expand_mode = 1
stretch_mode = 2
